slight update to tint of alpha covering bg image. removed scroll ability on it too to stop the full black and white form showing -implemented local storage for remembering cycle size changes and properly clearing counter when needed

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,11 +5,12 @@
 .universe{
 	background-image: url('../img/all_religions2.png');
 	background-size: 100% 100%;	
+
 }
 .micontent{
 	height:100%;
 	width:100%;
-	background-color: rgba(255,255,255,0.9);	
+	background-color: rgba(255,255,255,0.95);
 }
 i.setico{
 	font-size:1.75em;
